<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/session_id"
                android:visibility="visible"
                app:helperText="* Required"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSessionId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/client_hash"
                android:visibility="visible"
                app:helperText="* Required"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputHash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/client_hash_id"
                android:visibility="visible"
                app:helperText="* Required"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputHashId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <RadioGroup
                android:id="@+id/radioGroupEnvironment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checkedButton="@id/radioDev"
                android:orientation="horizontal"
                android:visibility="visible">

                <RadioButton
                    android:id="@+id/radioProd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prod"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <RadioButton
                    android:id="@+id/radioDev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/dev"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupEntryType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checkedButton="@id/radioPhoto"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <RadioButton
                    android:id="@+id/radioVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <RadioButton
                    android:id="@+id/radioFace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/face"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupCameraSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checkedButton="@id/radioFront"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/radioFront"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/front"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <RadioButton
                    android:id="@+id/radioBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/back"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupImageFormat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checkedButton="@id/radioPng"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/radioJpeg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jpeg"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <RadioButton
                    android:id="@+id/radioPng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/png"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupResolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checkedButton="@id/radioLow"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/radioLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <RadioButton
                    android:id="@+id/radioHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/high"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupShape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checkedButton="@id/radioCircle"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/radioCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/circle"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <RadioButton
                    android:id="@+id/radioEllipse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/ellipse"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checkedButton="@id/radioEn"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioUz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uzbek"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <RadioButton
                    android:id="@+id/radioEn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/english"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <RadioButton
                    android:id="@+id/radioRu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/russian"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
            </RadioGroup>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonStart"
            style="@style/Widget.Material3.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/scan_face_data"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <TextView
            android:id="@+id/textResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <ImageView
            android:id="@+id/imageResult"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:importantForAccessibility="no" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>